# app/models/attachment.rb
@@ -1,6 +1,4 @@
 class Attachment < ApplicationRecord
-  mount_base64_uploader :attached_file, FileUploader, file_name: ->(a) { a.name }
+  has_one_attached :file
   belongs_to :pia, inverse_of: :attachments
-
-  attr_accessor :file, :name, :mime_type
 end
