# db/schema.rb
@@ -10,9 +10,37 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2024_02_16_103644) do
+ActiveRecord::Schema[8.0].define(version: 2025_04_01_203524) do
   # These are extensions that must be enabled in order to support this database
-  enable_extension "plpgsql"
+  enable_extension "pg_catalog.plpgsql"
+
+  create_table "active_storage_attachments", force: :cascade do |t|
+    t.string "name", null: false
+    t.string "record_type", null: false
+    t.bigint "record_id", null: false
+    t.bigint "blob_id", null: false
+    t.datetime "created_at", null: false
+    t.index ["blob_id"], name: "index_active_storage_attachments_on_blob_id"
+    t.index ["record_type", "record_id", "name", "blob_id"], name: "index_active_storage_attachments_uniqueness", unique: true
+  end
+
+  create_table "active_storage_blobs", force: :cascade do |t|
+    t.string "key", null: false
+    t.string "filename", null: false
+    t.string "content_type"
+    t.text "metadata"
+    t.string "service_name", null: false
+    t.bigint "byte_size", null: false
+    t.string "checksum"
+    t.datetime "created_at", null: false
+    t.index ["key"], name: "index_active_storage_blobs_on_key", unique: true
+  end
+
+  create_table "active_storage_variant_records", force: :cascade do |t|
+    t.bigint "blob_id", null: false
+    t.string "variation_digest", null: false
+    t.index ["blob_id", "variation_digest"], name: "index_active_storage_variant_records_uniqueness", unique: true
+  end
 
   create_table "answers", id: :serial, force: :cascade do |t|
     t.string "reference_to", null: false
@@ -25,7 +53,6 @@ ActiveRecord::Schema[7.0].define(version: 2024_02_16_103644) do
   end
 
   create_table "attachments", id: :serial, force: :cascade do |t|
-    t.string "attached_file"
     t.boolean "pia_signed", default: false
     t.integer "pia_id"
     t.datetime "created_at", precision: nil, null: false
@@ -215,6 +242,8 @@ ActiveRecord::Schema[7.0].define(version: 2024_02_16_103644) do
     t.index ["user_id"], name: "index_users_pias_on_user_id"
   end
 
+  add_foreign_key "active_storage_attachments", "active_storage_blobs", column: "blob_id"
+  add_foreign_key "active_storage_variant_records", "active_storage_blobs", column: "blob_id"
   add_foreign_key "answers", "pias"
   add_foreign_key "attachments", "pias"
   add_foreign_key "comments", "pias"
